--- a/index.html
+++ b/index.html
@@ -28,6 +28,14 @@
                 <h3 class="text-warning">No phone found. Try a new search</h3>
             </div>
         </section>
+        <!-- loader -->
+        <section id="loader" class="d-none">
+            <div style="height: 400px;" class="d-flex justify-content-center align-items-center">
+                <div class="spinner-border text-success" role="status">
+                    <span class="visually-hidden">Loading...</span>
+                </div>
+            </div>
+        </section>
     </main>
 
 
